--- a/privacy.html
+++ b/privacy.html
@@ -3,10 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Privacy Policy</title>
+  <title>Privacy Policy - Restaurant App</title>
+  <style>
+    body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
+    h1, h2 { color: #333; }
+    a { color: #007bff; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+  </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>Your privacy policy text goes here...</p>
+
+  <p>Effective date: August 27, 2025</p>
+
+  <p>Welcome to our Restaurant App. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your personal information when you use our app.</p>
+
+  <h2>1. Information We Collect</h2>
+  <p>We may collect the following information:</p>
+  <ul>
+    <li>Personal information you provide, such as name, email, phone number, and address.</li>
+    <li>Order details and preferences to improve your experience.</li>
+    <li>Device information and analytics for app performance and troubleshooting.</li>
+  </ul>
+
+  <h2>2. How We Use Your Information</h2>
+  <p>We use the information we collect to:</p>
+  <ul>
+    <li>Process your orders and payments.</li>
+    <li>Provide customer support.</li>
+    <li>Send you updates, promotions, or notifications (if you opt-in).</li>
+    <li>Improve the app and user experience.</li>
+  </ul>
+
+  <h2>3. Data Sharing</h2>
+  <p>We do not sell your personal information. We may share your data with:</p>
+  <ul>
+    <li>Service providers for order processing and delivery.</li>
+    <li>Legal authorities if required by law.</li>
+  </ul>
+
+  <h2>4. Security</h2>
+  <p>We implement reasonable security measures to protect your information from unauthorized access, alteration, or disclosure. However, no method of transmission over the internet is 100% secure.</p>
+
+  <h2>5. Children’s Privacy</h2>
+  <p>Our app is not intended for children under 13. We do not knowingly collect personal information from children.</p>
+
+  <h2>6. Your Rights</h2>
+  <p>You may:</p>
+  <ul>
+    <li>Access, update, or delete your personal information by contacting us.</li>
+    <li>Opt out of marketing communications at any time.</li>
+  </ul>
+
+  <h2>7. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Changes will be posted on this page with the effective date.</p>
+
+  <h2>8. Contact Us</h2>
+  <p>If you have questions or concerns about this policy, please contact us at:</p>
+  <p>Email: <a href="mailto:contact@restaurantapp.com">contact@restaurantapp.com</a></p>
+
+  <p>Thank you for using our Restaurant App!</p>
 </body>
 </html>
